--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "maven-remote-resources-plugin-1.1.tar.bz2:"	fb487163f8be38a93f27d48f34ec9142c9a75ac6
+  maven-remote-resources-plugin-1.4-source-release.zip: 6c934693ee8adc4486125b82d9a96b01cb3e7493
